--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="css/index.css">
+ <script src="index.js"></script>
+</head>
 <div class="container">
   <div id="score"></div>
   <canvas id="game" width="375" height="375"></canvas>
